# tabulated_data_inference

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  example_script.cpp  tabulated_data_inference.h
include/: delim_helpers.h  grammar.h
src/: delim_helpers.cpp  grammar.cpp  tabulated_data_inference.cpp
tests/: CMakeLists.txt  test_parsing.cpp  test_tabulated_data_inference.cpp  test_tabulated_data_inference.h
tests/test_targets/: README.md  acsm_shortened.csv  xf-naca2408-il-50000.csv
